--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,5 +23,5 @@ en:
   hello: "Hello world"
   recaptcha:
     errors:
-      verification_failed: 'reCAPTCHA was incorrect, please try again.'
-      recaptcha_unreachable: 'reCAPTCHA verification server error, please try again.'
+      verification_failed: "reCAPTCHA was incorrect, please try again."
+      recaptcha_unreachable: "reCAPTCHA verification server error, please try again."
